# WasmHot

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh  config.yaml
cmake/: cityhash_config.h.in
src/: main.cpp
src/actor/: actor.cpp  actor.h  actor_runtime.cpp  actor_runtime.h  battle_actor.cpp  battle_actor.h  mail_actor.cpp  mail_actor.h  room_actor.cpp  room_actor.h
src/common/: noncopyable.h  singleton.h
src/core/: component_storage.cpp  component_storage.h  gateway.cpp  gateway.h  logging.cpp  logging.h  migration_engine.cpp  migration_engine.h  module_manager.cpp  module_manager.h  object.cpp  object.h  object_registry.cpp  object_registry.h  plugin_interface.h  schema_manager.cpp  schema_manager.h  signal_handler.cpp  signal_handler.h
src/network/: gateway.cpp  gateway.h
src/plugin/: native_plugin.cpp  native_plugin.h  wasmedge_plugin.cpp  wasmedge_plugin.h  wasmtime_plugin.cpp  wasmtime_plugin.h
src/wasm_src/: example.c  example.wat
test/: CMakeLists.txt  battle_plugin.cpp  test_common.h  test_main.cpp  test_object.cpp  test_plugin.cpp
